[package]
name = "trading_sessions"
version = "0.1.3"
repository = "https://github.com/xylex-ai/trading_sessions"
edition = "2021"
authors = ["Floris floris@xylex.ai & Hadi hadi@xylex.ai"]
description = "A lightweight library in Rust for identifying and verifying trading sessions"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.35.0", features = ["lazy"] }
